# webrtc-broadcast

./: README.md
client/: .gitignore  .htmlnanorc.json  README.md  package.json  pnpm-lock.yaml  tsconfig.json
client/src/: client.html  host.html  index.html  test.html
client/src/css/: global.css  host.css
client/src/js/: client.ts  host.ts  peer.ts  test.ts
server/: Cargo.toml
server/src/: main.rs  state.rs
signal/: Cargo.toml  README.md
signal/src/: lib.rs  main.rs  state.rs  ws.rs
