[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
flume = { version = "0.10", features = ["async"] }
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
log = "0.4"
serde_json = { version = "1", default-features = false }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.17", default-features = false }
webrtc = { version = "0.4", git = "https://github.com/webrtc-rs/webrtc" }

[dependencies.env_logger]
version = "0.9"
default-features = false
features = ["termcolor"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["sink"]
